--- a/EmailClient/EmailClient/MainWindow.xaml
+++ b/EmailClient/EmailClient/MainWindow.xaml
@@ -42,11 +42,11 @@
         <!-- Create and Search Area -->
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="250"/>
                 <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
-            <Button Width="100" HorizontalAlignment="Left" Grid.Column="0" Margin="5" Content="New" Command="{Binding CreateNewEmailCommand}"></Button>
+            <Button Width="100" HorizontalAlignment="Left" Grid.Column="0" Margin="5" Content="Refresh" Command="{Binding RefreshEmailCommand}"></Button>
             <TextBox Grid.Column="1" Margin="5"></TextBox>
             <Button Grid.Column="2" Margin="5" Content="Search" Command="{Binding SearchEmailCommand}"></Button>
         </Grid>
@@ -63,6 +63,37 @@
             
             <!-- Folders Area -->
             <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Line Grid.Row="0" Style="{StaticResource horizontalLineStyle}"/>
+                <Button Width="100" HorizontalAlignment="Left" Grid.Row="0" Margin="5" Content="New" Command="{Binding CreateNewEmailCommand}"></Button>
+                <Grid Grid.Row="1">
+                    <ListBox ItemsSource="{Binding Folders}" SelectedItem="{Binding SelectedFolder}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="5">
+                                    <Grid.InputBindings>
+                                        <MouseBinding Gesture="LeftDoubleClick" Command="{Binding RelativeSource={RelativeSource FindAncestor, 
+                                            AncestorType={x:Type Window}}, Path=DataContext.ShowFolderCommand}"/>
+                                    </Grid.InputBindings>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Row="0">
+                                        <TextBlock.Text>
+                                            <MultiBinding StringFormat="{}{0} - ({1})">
+                                                <Binding Path="Name"/>
+                                                <Binding Path="Count"/>
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
             </Grid>
             
             <!-- Email Area -->
