--- a/EmailClient/EmailClient/MainWindow.xaml
+++ b/EmailClient/EmailClient/MainWindow.xaml
@@ -70,14 +70,10 @@
                 <Line Grid.Row="0" Style="{StaticResource horizontalLineStyle}"/>
                 <Button Width="100" HorizontalAlignment="Left" Grid.Row="0" Margin="5" Content="New" Command="{Binding CreateNewEmailCommand}"></Button>
                 <Grid Grid.Row="1">
-                    <ListBox ItemsSource="{Binding Folders}" SelectedItem="{Binding SelectedFolder}">
+                    <ListBox ItemsSource="{Binding Folders}" SelectedIndex="{Binding SelectedFolderIndex}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <Grid Margin="5">
-                                    <Grid.InputBindings>
-                                        <MouseBinding Gesture="LeftDoubleClick" Command="{Binding RelativeSource={RelativeSource FindAncestor, 
-                                            AncestorType={x:Type Window}}, Path=DataContext.ShowFolderCommand}"/>
-                                    </Grid.InputBindings>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
@@ -118,8 +114,8 @@
                         <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0" Content="Sort by:"></Label>
-                    <Button Grid.Column="1" Margin="5" Width="90" Content="Date" Command="{Binding SortByDateCommand}"/>
-                    <Button Grid.Column="2" Margin="5" Width="90" Content="From" Command="{Binding SortByFromCommand}"/>
+                    <Button Grid.Column="1" Margin="5" Width="90" Content="Date v" Command="{Binding SortByDateDownCommand}"/>
+                    <Button Grid.Column="2" Margin="5" Width="90" Content="Date ^" Command="{Binding SortByDateUpCommand}"/>
                     <Label Grid.Column="3" Content="# to Display:"></Label>
                     <Button Grid.Column="4" Margin="5" Width="30" Content="10" Command="{Binding DisplayTenCommand}"/>                    
                     <Button Grid.Column="5" Margin="5" Width="30" Content="20" Command="{Binding DisplayTwentyCommand}"/>
@@ -129,7 +125,7 @@
                 
                 <!-- Email List -->
                 <Grid Grid.Row="1">
-                    <ListBox ItemsSource="{Binding Emails}" SelectedItem="{Binding SelectedEmail}">
+                    <ListBox ItemsSource="{Binding Emails}" SelectedIndex="{Binding SelectedEmailIndex}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <Grid Margin="5">
